<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragment.AddMasjidFragment">

    <EditText
        android:id="@+id/masjid_name_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_masjid_masjid_name_hint"
        android:textSize="25sp"
        android:layout_alignParentTop="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_masjid_location_button"
        android:layout_below="@+id/masjid_name_textbox"
        android:layout_centerHorizontal="true"
        android:id="@+id/get_masjid_location_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_masjid_masjid_submit_button"
        android:id="@+id/add_masjid_submit_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
